# manjevas-six502

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
src/six502/: __init__.py  __main__.py  _six502.py  addressing.py  addressing_.py  bus.py  bus_.py  clock.py  clock_.py  config.toml  cpu.py  cpu_.py  emulate.py  emulate_.py  instructions.py  instructions_.py  keyboard.py  keyboard_.py  memory.py  monitor.py  monitor_.py  register.py  registers.py
src/six502/assembler/: _assembler.py
src/six502/component/: __init__.py  _clock.py  _register.py
src/six502/debug/: __init__.py  _tools.py
src/six502/disassembler/: _disassembler.py
src/six502/instruction/: _addressing.py  _instruction.py  _status.py  opcodes.json
test/: _bus.py  _memory.py  test_addressing.py  test_clock.py  test_instruction.py  test_register.py
tests/: create_test_file.py  test_addressing.py  test_bus.py  test_clock.py  test_emulate.py  test_instructions.py  test_keyboard.py  test_memory.py  test_monitor.py  test_register.py  test_registers.py
